/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.MarketRoles.Contracts";

message RequestChangeOfSupplier {
  string TransactionId = 1;
  string EnergySupplierGlnNumber = 2;
  string SocialSecurityNumber = 3;
  string VATNumber = 4;
  string AccountingPointGsrnNumber = 5;
  google.protobuf.Timestamp StartDate = 6;
}

message RequestMoveIn {
  string TransactionId = 1;
  string EnergySupplierGlnNumber = 2;
  string SocialSecurityNumber = 3;
  string VATNumber = 4;
  string ConsumerName = 5;
  string AccountingPointGsrnNumber = 6;
  google.protobuf.Timestamp MoveInDate = 7;
}

message ForwardConsumerDetails {
  string AccountingPointId = 1;
  string BusinessProcessId = 2;
  string Transaction = 3;
}

message NotifyCurrentSupplier {
  string AccountingPointId = 1;
  string BusinessProcessId = 2;
  string Transaction = 3;
}

message ForwardMeteringPointDetails {
  string AccountingPointId = 1;
  string BusinessProcessId = 2;
  string Transaction = 3;
}

message ChangeSupplier {
  string AccountingPointId = 1;
  string Transaction = 2;
}

message EffectuateConsumerMoveIn {
  string AccountingPointId = 1;
  string Transaction = 2;
}

message MarketRolesEnvelope {
  oneof MarketRolesMessages {
    RequestChangeOfSupplier requestChangeOfSupplier = 1;
    RequestMoveIn requestMoveIn = 2;
    ForwardConsumerDetails forwardConsumerDetails = 3;
    NotifyCurrentSupplier notifyCurrentSupplier = 4;
    ForwardMeteringPointDetails forwardMeteringPointDetails = 5;
    ChangeSupplier changeSupplier = 6;
    EffectuateConsumerMoveIn effectuateConsumerMoveIn = 7;
  }
}
